Refactor Drug Application API: Update endpoint paths, adjust pagination parameters, and enhance documentation